remove tags from blog single page, kill image from top blog post on blog archive when mobile

--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -307,7 +307,11 @@
 .lead-blog-post {
 
 	.post {
-		display: flex;
+		display: block;
+
+		@media screen and (min-width: 600px) {
+			display: flex;
+		}
 	}
 
 	.content {
@@ -347,10 +351,19 @@
 		}
 	}
 
-	.portion {
+	.content.portion {
 		width: 100%;
 
-		@media screen and (min-width: 600px) {
+		@media screen and (min-width: 900px) {
+			width: 50%;
+		}
+	}
+
+	.thumbnail.portion {
+		display: none;
+
+		@media screen and (min-width: 900px) {
+			display: block;
 			width: 50%;
 		}
 	}
@@ -360,11 +373,11 @@
 	}
 
 	.thumbnail {
-		display: block;
+		display: none;
 		width: 100%;
 
-		@media screen and (min-width: 600px) {
-			// display: table-cell;
+		@media screen and (min-width: 900px) {
+			display: block;
 			height: 100%;
 		}
 	}
