removing tags from recent posts widget, fixing errors in author & date.Fix error in instagram icon.

--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -50,8 +50,12 @@
 	}
 
 	h2 {
-		font-size: 1.714em;
+		font-size: 1.5rem;
 		margin: 0.25em 0 1.5em;
+
+		@media screen and (min-width: 900px) {
+			font-size: 1.714rem;
+		}
 	}
 	h3 {
 		font-size: 1.5em;
@@ -542,7 +546,11 @@
 }
 
 h1.entry-title {
-	font-size: 4.375rem;
+	font-size: 2.5rem;
+
+	@media screen and (min-width: 900px) {
+		font-size: 4.375rem;
+	}
 }
 
 h2 {
