--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Afflecto Media Marketing
 Author URI: https://afflectomm.com/
 Description: Description
-Version: 1.0.4
+Version: 1.0.6
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -966,8 +966,13 @@ button.site-nav__btn {
   .page-content h2,
   .entry-content h2,
   .entry-summary h2 {
-    font-size: 1.714em;
+    font-size: 1.5rem;
     margin: 0.25em 0 1.5em; }
+    @media screen and (min-width: 900px) {
+      .page-content h2,
+      .entry-content h2,
+      .entry-summary h2 {
+        font-size: 1.714rem; } }
   .page-content h3,
   .entry-content h3,
   .entry-summary h3 {
@@ -1387,7 +1392,10 @@ button.site-nav__btn {
       margin: 0 0 3rem; } }
 
 h1.entry-title {
-  font-size: 4.375rem; }
+  font-size: 2.5rem; }
+  @media screen and (min-width: 900px) {
+    h1.entry-title {
+      font-size: 4.375rem; } }
 
 h2 {
   font-size: 2.25rem;
